--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^9.4.3",
+    "mongoose": "^8.2.4",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18",
