All set up for writting full endpoint fetch; pending to implement roles & endpoint fetch

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,5 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# ignore dummy data base
-calls.db
+# endpoints documentation sprint 1
+Endpoints.md
