--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-form-hook": "^0.0.1",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1"
   },
