--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "start2": "npm run dev"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.6.8",
